--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "postcss": "^8.4.38",
+    "prisma": "^6.16.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.3.3"
   }
