--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --max-warnings 0",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate --schema=packages/db/prisma/schema.prisma"
   },
   "dependencies": {
     "@codequest/common": "workspace:*",
