feat: Enhance Hero component with new design and animations
- Updated Hero section with a gradient background and improved typography.
- Added animations for text and image elements.
- Replaced buttons with new styles and icons for better UX.

feat: Improve ProblemStatement component with syntax highlighting

- Integrated react-syntax-highlighter for code blocks in problem descriptions.
- Enhanced styling for better readability.

feat: Refactor Problems component to include loading states and tags

- Implemented Suspense for loading skeletons while fetching problems.
- Added tags to problems for better categorization and filtering.
- Improved layout and styling for problem cards.

chore: Update package dependencies

- Added @radix-ui/react-icons and react-syntax-highlighter to package.json.
- Updated package-lock.json to reflect new dependencies.

style: Update Tailwind CSS configuration

- Added custom animations for fade-in effects.
- Cleaned up unused color and border radius definitions.

feat: Create Badge component for problem difficulty and tags

- Implemented a reusable Badge component with different variants.

feat: Implement DarkModeProvider for theme management

- Created a context provider to manage dark mode state and persist it in localStorage.

feat: Add SkeletonCard component for loading states

- Implemented a SkeletonCard component to display while data is loading.

--- a/.github/workflows/sync-problems.yml
+++ b/.github/workflows/sync-problems.yml
@@ -1,3 +1,4 @@
+
 name: Sync Problems from Admin Repository
 
 on:
@@ -15,6 +16,8 @@ on:
         description: "Source repository owner"
         required: true
         type: string
+  repository_dispatch:
+    types: [sync-problems]
 
 jobs:
   sync:
