--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@codequest/ui": "workspace:*",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.2",
@@ -30,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.6.6",
     "react-toastify": "^10.0.5",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.3.0",
