--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@codequest/db": "workspace:*",
     "@codequest/ui": "workspace:*",
     "@monaco-editor/react": "^4.6.0",
+    "@prisma/client": "^6.16.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.0.2",
