--- a/.github/workflows/update-question.yml
+++ b/.github/workflows/update-question.yml
@@ -22,8 +22,14 @@ jobs:
           node-version: 18
           cache: npm
 
-      - name: Install dependencies
+      - name: Install root dependencies
         run: npm ci
+
+      - name: Install DB package dependencies
+        run: cd packages/db && npm ci
+
+      - name: Generate Prisma client
+        run: cd packages/db && npx prisma generate --schema=prisma/schema.prisma
 
       - name: Find changed problems
         id: find_problems
