--- a/.github/workflows/update-question.yml
+++ b/.github/workflows/update-question.yml
@@ -22,18 +22,19 @@ jobs:
           node-version: 18
           cache: npm
 
-      - name: Install root dependencies
+      # Install all dependencies for all workspaces
+      - name: Install all workspace dependencies
         run: npm ci
 
-      - name: Install DB package dependencies
-        run: cd packages/db && npm ci
+      # Build all workspace packages (important for local imports like @codequest/common)
+      - name: Build all workspace packages
+        run: npm run build --workspaces --if-present
 
+      # Generate Prisma client (after build, in case types are needed)
       - name: Generate Prisma client
         run: cd packages/db && npx prisma generate --schema=prisma/schema.prisma
 
-      - name: Install ts-node and TypeScript globally
-        run: npm install -g ts-node typescript
-
+      # Update each problem in database
       - name: Update each problem in database
         run: |
           for problem in problems/*; do
