--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "postcss": "^8.4.38",
     "prisma": "^6.16.2",
     "tailwindcss": "^3.4.3",
+     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
