refactor: update postinstall script and Prisma dependencies
- Changed the postinstall script in package.json to use a custom node script.
- Updated @prisma/client and prisma dependencies to version 6.16.2 in packages/db/package.json.
- Removed outdated pnpm-lock.yaml file from packages/db.
- Added a new postinstall.js script to handle Prisma generation conditionally based on the environment and file existence.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --max-warnings 0",
-    "postinstall": "if [ \"$CI\" != \"true\" ]; then prisma generate --schema=packages/db/prisma/schema.prisma; fi"
+  "postinstall": "node scripts/postinstall.js"
   },
   "dependencies": {
     "@codequest/common": "workspace:*",
