--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,8 +15,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "ts-node": "^10.9.2"
   },
